--- a/package.json
+++ b/package.json
@@ -9,23 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/navbar": "^2.0.30",
-    "@nextui-org/react": "^2.3.6",
-    "@nextui-org/system": "^2.1.2",
-    "@nextui-org/theme": "^2.2.3",
+    "@nextui-org/navbar": "^2.0.31",
+    "@nextui-org/react": "^2.4.0",
+    "@nextui-org/system": "^2.2.0",
+    "@nextui-org/theme": "^2.2.4",
+    "embla-carousel": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
